FISH-11357 Payara Server Maven Plugin support